# ROB498

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierignore  Docker Instructions.md  Dockerfile  LICENSE  Other stuff.md  README.md  Software in the Loop.md  docker-compose.robot.myhal.yaml  docker-compose.robot.test.yaml  docker-compose.robot.yaml  docker-compose.robot_vision.yaml  docker-compose.yaml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto_documentation.yml  codeql-analysis.yml  docker_image.yml  docker_image_arm.yaml  test_catkin_lint.yml
docs/: api.rst  conf.py  home.rst  index.rst  requirements.txt
drone/: CMakeLists.txt  package.xml  setup.py
drone/challenges/challenge_2/results/ROB498_Drone-2023-03-07-12-11-02-wo-vicon-trial1/: ROB498_Drone-2023-03-07.12:11:02.csv
drone/challenges/challenge_2/results/ROB498_Drone-2023-03-07-12-37-40-wo-vicon/: ROB498_Drone-2023-03-07.12:37:40.csv
drone/challenges/challenge_3/results/ROB498_Drone-2023-03-29.19:31:51/: ROB498_Drone-2023-03-29.19:31:51.csv  waypoints.npy
drone/challenges/challenge_3/results/ROB498_Drone-2023-03-29.19:39:40/: ROB498_Drone-2023-03-29.19:39:40.csv  waypoints.npy
drone/challenges/challenge_3/results/ROB498_Drone-2023-03-29.19:48:38/: ROB498_Drone-2023-03-29.19:48:38.csv  waypoints.npy
drone/challenges/challenge_3/scoring_code/: eval_challenge3_student.py
drone/challenges/challenge_4/results/ROB498_Drone-2023-04-12.14:33:56/: ROB498_Drone-2023-04-12.14:33:56.csv  waypoints.npy
drone/challenges/challenge_4/results/ROB498_Drone-2023-04-12.14:56:30/: ROB498_Drone-2023-04-12.14:56:30.csv  obs_green.npy  obs_red.npy  waypoints.npy
drone/challenges/challenge_4/scoring_code/: drawing.py  eval_challenge4_student.py
drone/config/: config.yaml
drone/launch/: bridge.launch  bridge_mavros.launch  bridge_mavros_challenge_2.launch  drone.launch  gui.launch  gui2.launch  mavros_posix_sitl.launch  t265.launch
drone/rviz/: drone.rviz
drone/src/: sim_odom.cpp
drone/src/drone/: drone_comm.py  drone_control.py  local_planner.py  main.py  services.py  test.py  utils.py  vicon.py
drone/world/Challenge_4/: model.sdf
drone_common/: CMakeLists.txt  package.xml  setup.py
drone_common/src/drone_common/: __init__.py  pid.py  test_transform.py  utils.py
drone_common/world/Challenge_4/: Challenge_4.world  model.config
drone_control/: CMakeLists.txt  package.xml  setup.py
drone_control/config/: config_real.yaml  config_sim.yaml
drone_control/src/drone_control/: __init__.py  drone_comm.py  local_planner.py  main.py  navigation.py  services.py  test.py  utils.py  utils_math.py  utils_vis.py  vicon.py
drone_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
drone_description/meshes/: d435_simple.dae  vi_camera.dae  vi_sensor.dae
drone_description/urdf/: component_snippets.xacro  iris.xacro  iris_base.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro
drone_mapping/: CMakeLists.txt  README.md  package.xml  setup.py
drone_mapping/config/: config.yaml  config_real.yaml  config_sim.yaml
drone_mapping/launch/: start.launch
drone_mapping/src/drone_mapping/: grid_mapping.py  grid_mapping_ros.py  main.py  mapping.py  mapping_ros.py  utils.py
drone_msgs/: CMakeLists.txt  package.xml
drone_perception/: CMakeLists.txt  package.xml  setup.py
drone_perception/config/: config.yaml  config_real.yaml  config_sim.yaml
drone_perception/launch/: t265.launch
drone_perception/rviz/: t265.rviz
drone_perception/src/drone_perception/: __init__.py  camera.py  detector.py  detector_numbers.py  detector_obstacles.py  main.py  t265.py  t265_stereo.py  t265_stero.py  template_matching_final.py  test_color.py  test_mono.py  test_transform.py  transformation.py  utils.py
