<?xml version="1.0"?>
<package format="2">
  <name>drone</name>
  <version>0.0.0</version>
  <description>Main package to run ROB498 Drone</description>

  <maintainer email="jonathan.spraggett@mail.utoronto.ca">Jonathan Spraggett</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>mavros_msgs</depend>
  <depend>rotors_description</depend>
  <depend>px4_realsense_bridge</depend>
  <depend>drone_msgs</depend>
  <depend>drone_perception</depend>
  <depend>realsense2_camera</depend>
<!--  <depend>gazebo_ros</depend>-->
<!--  <depend>gazebo_msgs</depend>-->
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <depend>xterm</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" gazebo_media_path="${prefix}/models" />
  </export>
</package>
