<?xml version="1.0"?>
<package format="2">
  <name>drone</name>
  <version>0.0.0</version>
  <description>Main package to run ROB498 Drone</description>

  <maintainer email="jonathan.spraggett@mail.utoronto.ca">Jonathan Spraggett</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>

  <!-- Common -->
  <depend>drone_common</depend>
  <depend>drone_msgs</depend>

  <!-- Simulation -->
  <depend>drone_description</depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <!-- Control -->
  <depend>drone_control</depend>

  <!-- Perception -->
  <depend>drone_perception</depend>

  <!-- Mapping -->
  <depend>drone_mapping</depend>

  <!-- VIO -->
  <depend>px4_realsense_bridge</depend>

  <!-- Sensors -->
  <depend>realsense2_camera</depend>
  <depend>xterm</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
    <gazebo_ros gazebo_model_path="${prefix}/models" gazebo_media_path="${prefix}/models" />
  </export>
</package>
