<?xml version="1.0"?>
<package format="2">
  <name>drone_mapping</name>
  <version>0.0.0</version>
  <description>Drone Mapping package</description>

  <maintainer email="jonathan.spraggett@mail.utoronto.ca">Jonathan Spraggett</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>nav_msgs</depend>
  <depend>ros_numpy</depend>




  <export>

  </export>
</package>
